Code changes for Java 17 (WIP)
Use "var"
Refactor streams
Use pattern variables
Use record classes
Javadoc fixes